--- a/src/page-components/ProductPage/ProductPage.module.css
+++ b/src/page-components/ProductPage/ProductPage.module.css
@@ -1,11 +1,23 @@
 .main {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr .1fr 1fr;
   margin: 100px 25px;
+}
+
+.split-line {
+  width: 2px;
+  height: 90%;
+  margin: 0 auto;
+  align-self: center;
+  background-color: #c4c2c2;
+  border-radius: 2px;
 }
 
 .right-column {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (max-width: 700px) {
