--- a/src/page-components/ProductPage/Sections/CartActions.module.css
+++ b/src/page-components/ProductPage/Sections/CartActions.module.css
@@ -1,4 +1,9 @@
 .root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .quantity-text {
